# pixelweave-chromascale

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CITATION.cff  CMakeCXXUtils.txt  CMakeLists.txt  CXXUtils.cmake  LICENSE  README.md  TODO.md  buildAndPackage.bat  buildAndPackage.sh  cleanBuild.bat  vcpkg.json
benchmark/: BenchmarkAnalysis.ipynb  CMakeLists.txt  benchmark4090.csv  benchmarkCompareMac.csv  benchmarkCompareWindows.csv  benchmarkMac.csv  benchmarkWindows.csv  main.cpp  start.bat
lib/: CMakeLists.txt
lib/include/: Device.h  Macros.h  PixelFormat.h  RefCountPtr.h  Result.h  VideoConverter.h  VideoFrameWrapper.h  VulkanDevice.h  VulkanInstance.h
lib/shaders/: convert.comp
lib/src/: ColorSpaceUtils.cpp  ColorSpaceUtils.h  DebugUtils.h  Device.cpp  PixelFormat.cpp  RefCountPtr.cpp  ResourceLoader.cpp  ResourceLoader.h  ShaderResources.h  ShaderResources.rc  Timer.h  VideoConverter.cpp  VideoFrameWrapper.cpp  VulkanBase.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanDevice.cpp  VulkanDevice.h  VulkanImage.cpp  VulkanImage.h  VulkanInstance.cpp  VulkanInstance.h  VulkanTexture.cpp  VulkanTexture.h  VulkanVideoConverter.cpp  VulkanVideoConverter.h  vk_mem_alloc.h
lib/src/shaders/: convert.comp  convert.comp.spv  rebuild.bat
research/: RangeAndMatrix.ipynb  YUVTests.ipynb
test/: CMakeLists.txt  main.cpp
vulkan/macOS/lib/: libvulkan.1.3.231.dylib  libvulkan.1.dylib
